# FreqDETR

./: .gitignore  README.md  main.py  notes.md  progress.md  pyproject.toml  requirements.txt  run_trainer.py  setup.py
Maize/: README.dataset.txt  README.roboflow.txt
Maize/test/: _annotations.coco.json
Maize/train/: _annotations.coco.json
Maize/valid/: _annotations.coco.json
configs/dataset/: data.yaml
configs/model/: freqdetr_base.yaml
scripts/: print_trainer_help.py  run_example.sh  setup_env.sh
src/backbones/: cnn_backbone.py
src/data/: datamodule.py  transforms.py
src/heads/: freqdetr_head.py
src/models/: freqdetr.py
src/train/: evaluator.py  trainer.py
src/transformer/: decoder.py  encoder.py
src/utils/: box_ops.py  metrics.py  seed.py
