[project]
name = "frepdetr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "einops>=0.8.1",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pycocotools>=2.0.10",
    "pyyaml>=6.0.3",
    "tensorboard>=2.20.0",
    "timm>=1.0.20",
    "torch>=2.1",
    "torchvision>=0.16",
    "tqdm>=4.67.1",
]
